--- a/AuthorityApp/app/src/main/AndroidManifest.xml
+++ b/AuthorityApp/app/src/main/AndroidManifest.xml
@@ -59,6 +59,18 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
+        <activity
+            android:name=".TakeAJobActivity"
+            android:label="@string/title_activity_take_ajob" >
+        </activity>
+        <activity
+            android:name=".ReviewAJobActivity"
+            android:label="@string/title_activity_review_ajob" >
+        </activity>
+        <activity
+            android:name=".HighscoresActivity"
+            android:label="@string/title_activity_highscores" >
+        </activity>
     </application>
 
 </manifest>
