--- a/AuthorityApp/app/src/main/AndroidManifest.xml
+++ b/AuthorityApp/app/src/main/AndroidManifest.xml
@@ -71,6 +71,10 @@
             android:name=".HighscoresActivity"
             android:label="@string/title_activity_highscores" >
         </activity>
+        <activity
+            android:name=".ViewJobDetailsActivity"
+            android:label="@string/title_activity_view_job_details" >
+        </activity>
     </application>
 
 </manifest>
