--- a/AuthorityApp/app/build.gradle
+++ b/AuthorityApp/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 21
     buildToolsVersion "21.1.1"
 
     defaultConfig {
@@ -20,9 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.google.android.gms:play-services:+'
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile files ('libs/cognalys.jar')
+    compile files('libs/cognalys.jar')
 }
