--- a/AuthorityApp/app/build.gradle
+++ b/AuthorityApp/app/build.gradle
@@ -22,7 +22,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:21.0.2'
-    compile 'com.google.android.gms:play-services:+'
+    compile 'com.google.android.gms:play-services:3.1.+'
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile files('libs/cognalys.jar')
+    compile 'com.google.android.gms:play-services:7.0.0'
 }
