--- a/AuthorityApp/app/src/main/AndroidManifest.xml
+++ b/AuthorityApp/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:logo="@drawable/app_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
